--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -214,7 +214,7 @@
                     title = "",
                 } = c;
 
-                const { value: formValues } = await Swal.fire({
+                const { value: result } = await Swal.fire({
                     title: title,
                     html: msg,
                     backdrop: false,
@@ -239,9 +239,23 @@
                     }
                 })
 
-                if (formValues) {
-                    Swal.fire(JSON.stringify(formValues))
+
+                // this is the result of the user input , checked for all cases of input
+                if (result) {
+                    if(result.dismiss !== Swal.DismissReason.cancel){
+                        if(result.value!==""){
+                            if (c.callback !== undefined) {
+                                c.callback(result);
+                            }
+                        }
+                        else{
+                            c.callback(false);
+                        }
+                    } else{
+                        c.callback(false);
+                    }
                 }
+                
             }
 
             return {
