--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -74,7 +74,20 @@
         attention.custom({
             title: 'Choose your dates',
             msg: html,
+
+            // this function will be called if result is not empty or the dialog was not cancelled
+            callback:function(result){
+                console.log("called");
+
+                fetch('/search-availability-json')
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    console.log(data.ok);
+                    console.log(data.message);
+                })
+            }
+            });
         });
-    })
 </script>
 {{end}}
