--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -7,8 +7,11 @@
             <div class="col-md-6">
                 <h1 class="mt-3">Search for Availability</h1>
 
-                <form action="" method="post" novalidate class="needs-validation">
+                <form action="/search-availability" method="post" novalidate class="needs-validation">
+                    
+                    <!-- needs to be put for csrf , v imp has to be exactly like this line-->
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                    
                     <div class="row">
                         <div class="col">
                             <div class="row" id="reservation-dates">
